force-app/main/default/objects/Historial_de_Tracking__c/fields/Detalles_Master__c.field-meta.xml
<CustomField>
    <fullName>Detalles_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles Master</label>
    <referenceTo>Detalles_Master__c</referenceTo>
    <relationshipLabel>Historiales de Tracking</relationshipLabel>
    <relationshipName>Historiales_de_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>