force-app/main/default/objects/Historial_de_Tracking__c/fields/Estado_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Estado_Tracking__c</fullName>
    <label>Estado Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>