force-app/main/default/objects/Historial_de_Tracking__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha</label>
    <type>DateTime</type>
</CustomField>