force-app/main/default/objects/Historial_de_Tracking__c/fields/Oficina_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Origen__c</fullName>
    <label>Oficina de Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>