force-app/main/default/objects/Historial_de_Tracking__c/fields/Shipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Code__c</fullName>
    <formula>Detalles_Master__r.Shipment_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Code</label>
    <type>Text</type>
</CustomField>